style.css
/* ... */
input {
	min-width: 0;
	max-width: 100%;
}

table.form input {
	width: 100%;
}

th {
	padding: 0 0.3rem;
}

.permissionRow > th {
	padding: 0;
	text-align: left;
}

table {
	border-collapse: collapse;
}

.permissionRow > td {
	text-align: center;
	padding: 0;
}

.half {
	text-align: center;
	display: block;
	line-height: 1.15rem;
	min-height: 1.15rem;
}

body.pageMode main-scrollable {
	display: -webkit-flex;
	display: flex;
	height: 100%;
}

.chatScroller {
	height: 300px;
}

.chatPane {
	display: -webkit-flex;
	display: flex;
	flex-direction: column;
	overflow-y: auto;
	/*flex-basis: 100%;*/
}

#\$sidebarPinned {
	width: 100%;
}
.wideCell {
	width: 100%;
}

.wideCell > a {
	display: block;
}

.chatScroller {
	height: 100vh;
}

.chatScroller > scroll-inner {
	padding-bottom: 0.5rem;
}

html.f-splitView main-scrollable {
	flex-grow: 0;
	flex-basis: auto;
	overflow-y: hidden;
}

.split-top {
	overflow-y: auto;
}

.no-shrink {
	flex-shrink: 0;
}

